renamed Revision to Tag in the website overview

--- a/validation/html_static/validation.html
+++ b/validation/html_static/validation.html
@@ -28,7 +28,7 @@
 					</table>		
 				</div>
 				<div class='revisions menuhead'>
-					<img src="images/list.png" alt="Revisions">&nbsp; Revisions
+					<img src="images/list.png" alt="Tags">&nbsp; Tags
 				</div>
 				<div id='revisions' class='submenu'
 					style='display: block; position: relative;'>
